; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_command.c_db_skip_to_eol.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ddb/extr_db_command.c_db_skip_to_eol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tEOL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_skip_to_eol() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %4, %0
  %3 = call i32 (...) @db_read_token()
  store i32 %3, i32* %1, align 4
  br label %4

4:                                                ; preds = %2
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @tEOL, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %2, label %8

8:                                                ; preds = %4
  ret void
}

declare dso_local i32 @db_read_token(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
